--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -27,7 +27,7 @@
   <button class="tab" data-tab="support">Bug report</button>
 </div>
   <div class="profile-panels">
-  <section id="accounts" class="profile-card">
+  <section id="accounts" class="profile-card panel active"> ... </section>
     <h2>Game accounts</h2>
     <p class="muted">Create and manage your Lineage II accounts.</p>
 
@@ -39,7 +39,7 @@
     </div>
   </section>
 
-  <section id="vote" class="profile-card">
+  <section id="vote" class="profile-card panel"> ... </section>
     <h2>Server Vote</h2>
     <p class="muted">Vote links will appear here (4–5 sites).</p>
     <div class="link-list">
@@ -50,7 +50,7 @@
     </div>
   </section>
 
-  <section id="donate" class="profile-card">
+   <section id="donate" class="profile-card panel"> ... </section>
     <h2>Donate</h2>
     <p class="muted">No pay-to-win. Information about tokens/payment will be provided here.</p>
     <div class="donate-box">
@@ -58,7 +58,7 @@
       <div><strong>Message for recipient:</strong> your e-mail / account</div>
     </div>
   </section>
-  <section id="support" class="profile-card">
+  <section id="support" class="profile-card panel"> ... </section>
   <h2>Ticket / Bug report</h2>
   <p class="muted">Something not working? Send us a ticket.</p>
   <a class="btn btn-primary" href="/support/" style="max-width:320px;">Submit ticket</a>
@@ -67,21 +67,20 @@
 </div>
 </main>
 <script>
-  const tabs = document.querySelectorAll('.profile-tabs .tab');
-  const panels = document.querySelectorAll('.profile-panels .panel');
+  document.addEventListener('DOMContentLoaded', () => {
+    const tabs = document.querySelectorAll('.profile-tabs .tab');
+    const panels = document.querySelectorAll('.profile-panels .panel');
 
-  tabs.forEach(btn => {
-    btn.addEventListener('click', () => {
-      const key = btn.dataset.tab;
+    const show = (key) => {
+      tabs.forEach(t => t.classList.toggle('active', t.dataset.tab === key));
+      panels.forEach(p => p.classList.toggle('active', p.id === key));
+    };
 
-      tabs.forEach(b => b.classList.remove('active'));
-      btn.classList.add('active');
-
-      panels.forEach(p => p.classList.remove('active'));
-      const target = document.getElementById(key);
-      if (target) target.classList.add('active');
-    });
+    tabs.forEach(t => t.addEventListener('click', () => show(t.dataset.tab)));
+    const first = document.querySelector('.profile-tabs .tab.active') || tabs[0];
+    if (first) show(first.dataset.tab);
   });
 </script>
+
 </body>
 </html>
