--- a/profile/index.html
+++ b/profile/index.html
@@ -27,7 +27,7 @@
   <button class="tab" data-tab="support">Hlášení bugů</button>
 </div>
     <div class="profile-panels">
-  <section id="accounts" class="profile-card">
+  <section id="accounts" class="profile-card panel active"> ... </section>
     <h2>Herní účty</h2>
     <p class="muted">Zde si vytvoříš a spravuješ své účty pro Lineage II.</p>
 
@@ -39,7 +39,7 @@
     </div>
   </section>
 
-  <section id="vote" class="profile-card">
+  <section id="vote" class="profile-card panel"> ... </section>
     <h2>Hlasování pro server</h2>
     <p class="muted">Odkazy na hlasování budou zde (4–5 webů).</p>
     <div class="link-list">
@@ -50,7 +50,7 @@
     </div>
   </section>
   
-  <section id="donate" class="profile-card">
+  <section id="donate" class="profile-card panel"> ... </section>
     <h2>Podpora serveru</h2>
     <p class="muted">Žádné pay-to-win. Zde budou informace k tokenům / platbě.</p>
     <div class="donate-box">
@@ -58,7 +58,7 @@
       <div><strong>Zpráva pro příjemce:</strong> tvůj e-mail / účet</div>
     </div>
   </section>
-  <section id="support" class="profile-card">
+  <section id="support" class="profile-card panel"> ... </section>
   <h2>Ticket / Bug report</h2>
   <p class="muted">Něco nefunguje? Pošli nám ticket.</p>
   <a class="btn btn-primary" href="/support/" style="max-width:320px;">Odeslat ticket</a>
@@ -67,21 +67,21 @@
 </div>
 </main>
 <script>
-  const tabs = document.querySelectorAll('.profile-tabs .tab');
-  const panels = document.querySelectorAll('.profile-panels .panel');
+  document.addEventListener('DOMContentLoaded', () => {
+    const tabs = document.querySelectorAll('.profile-tabs .tab');
+    const panels = document.querySelectorAll('.profile-panels .panel');
 
-  tabs.forEach(btn => {
-    btn.addEventListener('click', () => {
-      const key = btn.dataset.tab;
+    const show = (key) => {
+      tabs.forEach(t => t.classList.toggle('active', t.dataset.tab === key));
+      panels.forEach(p => p.classList.toggle('active', p.id === key));
+    };
 
-      tabs.forEach(b => b.classList.remove('active'));
-      btn.classList.add('active');
-
-      panels.forEach(p => p.classList.remove('active'));
-      const target = document.getElementById(key);
-      if (target) target.classList.add('active');
-    });
+    tabs.forEach(t => t.addEventListener('click', () => show(t.dataset.tab)));
+    const first = document.querySelector('.profile-tabs .tab.active') || tabs[0];
+    if (first) show(first.dataset.tab);
   });
+</script>
+
 </script>
 </body>
 
