--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -21,66 +21,72 @@
   <h1>My profile</h1>
 
   <div class="profile-tabs">
-  <button class="tab active" data-tab="accounts">Accounts</button>
-  <button class="tab" data-tab="vote">Vote</button>
-  <button class="tab" data-tab="donate">Donate</button>
-  <button class="tab" data-tab="support">Bug report</button>
-</div>
+    <button type="button" class="tab active" data-tab="accounts">Accounts</button>
+    <button type="button" class="tab" data-tab="vote">Server vote</button>
+    <button type="button" class="tab" data-tab="donate">Donate</button>
+    <button type="button" class="tab" data-tab="support">Bug report</button>
+  </div>
+
   <div class="profile-panels">
-  <section id="accounts" class="profile-card panel active"> ... </section>
-    <h2>Game accounts</h2>
-    <p class="muted">Create and manage your Lineage II accounts.</p>
+    <section id="accounts" class="profile-card panel active">
+      <h2>Game accounts</h2>
+      <p class="muted">Create and manage your Lineage II accounts.</p>
 
-    <a class="btn btn-primary" href="#" style="max-width:320px;">Create game account</a>
+      <a class="btn btn-primary" href="#" style="max-width:320px;">Create game account</a>
 
-    <div class="mini-list">
-      <div class="mini-row"><strong>Acc:</strong> od_test1 <span class="tag">3 characters</span></div>
-      <div class="mini-row"><strong>Acc:</strong> od_test2 <span class="tag">1 characters</span></div>
-    </div>
-  </section>
+      <div class="mini-list">
+        <div class="mini-row"><strong>Account:</strong> od_test1 <span class="tag">3 characters</span></div>
+        <div class="mini-row"><strong>Account:</strong> od_test2 <span class="tag">1 character</span></div>
+      </div>
+    </section>
 
-  <section id="vote" class="profile-card panel"> ... </section>
-    <h2>Server Vote</h2>
-    <p class="muted">Vote links will appear here (4–5 sites).</p>
-    <div class="link-list">
-      <a href="#" class="link-item">Vote server #1</a>
-      <a href="#" class="link-item">Vote server #2</a>
-      <a href="#" class="link-item">Vote server #3</a>
-      <a href="#" class="link-item">Vote server #4</a>
-    </div>
-  </section>
+    <section id="vote" class="profile-card panel">
+      <h2>Server vote</h2>
+      <p class="muted">Vote links will appear here (4–5 sites).</p>
 
-   <section id="donate" class="profile-card panel"> ... </section>
-    <h2>Donate</h2>
-    <p class="muted">No pay-to-win. Information about tokens/payment will be provided here.</p>
-    <div class="donate-box">
-      <div><strong>IBAN:</strong> XXXX XXXX XXXX</div>
-      <div><strong>Message for recipient:</strong> your e-mail / account</div>
-    </div>
-  </section>
-  <section id="support" class="profile-card panel"> ... </section>
-  <h2>Ticket / Bug report</h2>
-  <p class="muted">Something not working? Send us a ticket.</p>
-  <a class="btn btn-primary" href="/support/" style="max-width:320px;">Submit ticket</a>
-</section>
-</div>
-</div>
+      <div class="link-list">
+        <a href="#" class="link-item">Vote site #1</a>
+        <a href="#" class="link-item">Vote site #2</a>
+        <a href="#" class="link-item">Vote site #3</a>
+        <a href="#" class="link-item">Vote site #4</a>
+      </div>
+    </section>
+
+    <section id="donate" class="profile-card panel">
+      <h2>Donate</h2>
+      <p class="muted">No pay-to-win. Token/payment info will be provided here.</p>
+
+      <div class="donate-box">
+        <div><strong>IBAN:</strong> XXXX XXXX XXXX</div>
+        <div><strong>Message for recipient:</strong> your e-mail / account</div>
+      </div>
+    </section>
+
+    <section id="support" class="profile-card panel">
+      <h2>Ticket / Bug report</h2>
+      <p class="muted">Something not working? Send us a ticket.</p>
+
+      <a class="btn btn-primary" href="/support/" style="max-width:320px;">Submit ticket</a>
+    </section>
+  </div>
 </main>
+
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const tabs = document.querySelectorAll('.profile-tabs .tab');
-    const panels = document.querySelectorAll('.profile-panels .panel');
+document.addEventListener('DOMContentLoaded', () => {
+  const tabs = document.querySelectorAll('.profile-tabs .tab');
+  const panels = document.querySelectorAll('.profile-panels .panel');
 
-    const show = (key) => {
-      tabs.forEach(t => t.classList.toggle('active', t.dataset.tab === key));
-      panels.forEach(p => p.classList.toggle('active', p.id === key));
-    };
+  const show = (key) => {
+    tabs.forEach(t => t.classList.toggle('active', t.dataset.tab === key));
+    panels.forEach(p => p.classList.toggle('active', p.id === key));
+  };
 
-    tabs.forEach(t => t.addEventListener('click', () => show(t.dataset.tab)));
-    const first = document.querySelector('.profile-tabs .tab.active') || tabs[0];
-    if (first) show(first.dataset.tab);
-  });
+  tabs.forEach(t => t.addEventListener('click', () => show(t.dataset.tab)));
+  const first = document.querySelector('.profile-tabs .tab.active') || tabs[0];
+  if (first) show(first.dataset.tab);
+});
 </script>
+
 
 </body>
 </html>
