--- a/profile/index.html
+++ b/profile/index.html
@@ -32,7 +32,28 @@
       <h2>Herní účty</h2>
       <p class="muted">Zde si vytvoříš a spravuješ své účty pro Lineage II.</p>
 
-      <a class="btn btn-primary" href="#" style="max-width:320px;">Vytvořit herní účet</a>
+      <a id="createAccBtn" class="btn btn-primary" href="#">Vytvořit herní účet</a>
+      <div id="accModal" class="modal hidden">
+  <div class="modal-box">
+    <h3>Vytvořit herní účet</h3>
+
+    <label>Login</label>
+    <input id="accLogin" type="text" placeholder="4–16 znaků (A–Z, 0–9, _)">
+
+    <label>Heslo</label>
+    <input id="accPass" type="password" placeholder="min. 6 znaků">
+
+    <label>E-mail (volitelné)</label>
+    <input id="accEmail" type="email" placeholder="email@example.com">
+
+    <div class="modal-actions">
+      <button id="accCancel" class="btn">Zrušit</button>
+      <button id="accSubmit" class="btn btn-primary">Vytvořit</button>
+    </div>
+
+    <div id="accMsg" class="form-error" style="display:none;"></div>
+  </div>
+</div>
 
       <div class="mini-list">
         <div class="mini-row"><strong>Účet:</strong> od_test1 <span class="tag">3 postavy</span></div>
@@ -84,5 +105,60 @@ document.addEventListener('DOMContentLoaded', () => {
   if (first) show(first.dataset.tab);
 });
 </script>
+<script>
+(() => {
+  const modal = document.getElementById('accModal');
+  const openBtn = document.getElementById('createAccBtn');
+  const cancelBtn = document.getElementById('accCancel');
+  const submitBtn = document.getElementById('accSubmit');
+  const msg = document.getElementById('accMsg');
+
+  const login = document.getElementById('accLogin');
+  const pass  = document.getElementById('accPass');
+  const email = document.getElementById('accEmail');
+
+  const open = () => { modal.classList.remove('hidden'); msg.style.display='none'; msg.textContent=''; };
+  const close = () => { modal.classList.add('hidden'); };
+
+  openBtn?.addEventListener('click', (e) => { e.preventDefault(); open(); });
+  cancelBtn?.addEventListener('click', (e) => { e.preventDefault(); close(); });
+  modal?.addEventListener('click', (e) => { if (e.target === modal) close(); });
+
+  submitBtn?.addEventListener('click', async (e) => {
+    e.preventDefault();
+    msg.style.display='none';
+
+    const payload = {
+      login: login.value.trim(),
+      password: pass.value,
+      email: email.value.trim()
+    };
+
+    submitBtn.disabled = true;
+    try {
+      const res = await fetch('/api/create_game_account.php', {
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify(payload)
+      });
+      const data = await res.json().catch(()=> ({}));
+
+      if (data.ok) {
+        msg.style.display='block';
+        msg.textContent = 'Hotovo. Účet byl vytvořen.';
+        pass.value = '';
+        // tady pak doplníme refresh seznamu účtů
+      } else {
+        msg.style.display='block';
+        msg.textContent = data.error || 'Chyba.';
+      }
+    } finally {
+      submitBtn.disabled = false;
+    }
+  });
+})();
+</script>
+
 </body>
 </html>
+
