--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -215,14 +215,41 @@ async function loadGameAccounts() {
   data.accounts.forEach(acc => {
     const row = document.createElement('div');
     row.className = 'mini-row';
-    row.innerHTML = `
-      <strong>Account:</strong> ${acc.login}
-	<span class="tag">${acc.chars_count} characters</span>
-      <span class="tag">${acc.created_at}</span>
-    `;
+   row.innerHTML = `
+  <strong>Account:</strong> ${acc.login}
+  <span class="tag">${acc.chars_count} characters</span>
+  <span class="tag">${acc.created_at}</span>
+
+  <div class="actions">
+    <button class="btn btn-small btn-danger" data-login="${acc.login}">
+      Delete
+    </button>
+    <button class="btn btn-small" data-reset="${acc.login}">
+      Reset password
+    </button>
+  </div>
+`;
     list.appendChild(row);
   });
 }
+</script>
+<script>
+document.addEventListener('click', (e) => {
+  const btn = e.target.closest('button[data-login]');
+  if (!btn) return;
+
+  const login = btn.dataset.login;
+
+  const ok = confirm(
+    document.documentElement.lang === 'en'
+      ? `Do you really want to delete account "${login}"?`
+      : `Opravdu chceš smazat účet "${login}"?`
+  );
+
+  if (!ok) return;
+
+  console.log('DELETE ACCOUNT:', login);
+});
 </script>
 
 <script>
