--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -234,28 +234,38 @@ async function loadGameAccounts() {
 }
 </script>
 <script>
-document.addEventListener('click', (e) => {
+document.addEventListener('click', async (e) => {
   const btn = e.target.closest('button[data-login]');
   if (!btn) return;
 
   const login = btn.dataset.login;
+  const keyword = 'delete';
 
-  const ok = confirm(
-    document.documentElement.lang === 'en'
-      ? `Do you really want to delete account "${login}"?`
-      : `Opravdu chceš smazat účet "${login}"?`
+  const text = prompt(
+    `Type "${keyword}" to confirm deletion of account "${login}"`
   );
 
-  if (!ok) return;
+  if (text !== keyword) {
+    alert('Deletion cancelled.');
+    return;
+  }
 
-  console.log('DELETE ACCOUNT:', login);
+  const res = await fetch('/api/delete_game_account.php', {
+    method: 'POST',
+    headers: {'Content-Type': 'application/json'},
+    body: JSON.stringify({ login })
+  });
+
+  const data = await res.json();
+
+  if (data.ok) {
+    alert('Account deleted.');
+    loadGameAccounts();
+  } else {
+    alert(data.error || 'Delete failed.');
+  }
 });
 </script>
 
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  loadGameAccounts();
-});
-</script>
 </body>
 </html>
