--- a/profile/index.html
+++ b/profile/index.html
@@ -233,23 +233,39 @@ async function loadGameAccounts() {
 }
 </script>
 <script>
-document.addEventListener('click', (e) => {
+document.addEventListener('click', async (e) => {
   const btn = e.target.closest('button[data-login]');
   if (!btn) return;
 
   const login = btn.dataset.login;
+  const keyword = 'smazat';
 
-  const ok = confirm(
-    document.documentElement.lang === 'en'
-      ? `Do you really want to delete account "${login}"?`
-      : `Opravdu chceš smazat účet "${login}"?`
+  const text = prompt(
+    `Pro potvrzení smazání účtu "${login}" napiš "${keyword}"`
   );
 
-  if (!ok) return;
+  if (text !== keyword) {
+    alert('Smazání zrušeno.');
+    return;
+  }
 
-  console.log('DELETE ACCOUNT:', login);
+  const res = await fetch('/api/delete_game_account.php', {
+    method: 'POST',
+    headers: {'Content-Type': 'application/json'},
+    body: JSON.stringify({ login })
+  });
+
+  const data = await res.json();
+
+  if (data.ok) {
+    alert('Účet byl smazán.');
+    loadGameAccounts();
+  } else {
+    alert(data.error || 'Chyba při mazání účtu.');
+  }
 });
 </script>
+
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
