uprava na konec en indexu ..

--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -266,6 +266,10 @@ document.addEventListener('click', async (e) => {
   }
 });
 </script>
-
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  loadGameAccounts();
+});
+</script>
 </body>
 </html>
