--- a/profile/index.html
+++ b/profile/index.html
@@ -53,6 +53,29 @@
         </div>
       </div>
 
+<div id="deleteModal" class="modal hidden">
+  <div class="modal-box">
+    <h3 id="deleteTitle">Smazat účet</h3>
+
+    <p id="deleteText">
+      Pro potvrzení smazání účtu <strong id="deleteLogin"></strong>
+      napiš <strong id="deleteKeyword">smazat</strong>.
+    </p>
+
+    <input id="deleteConfirmInput" type="text" placeholder="napiš smazat">
+
+    <div class="modal-actions">
+      <button id="deleteCancel" class="btn">Zrušit</button>
+      <button id="deleteConfirm" class="btn btn-danger" disabled>
+        Smazat účet
+      </button>
+    </div>
+
+    <div id="deleteMsg" class="form-error" style="display:none;"></div>
+  </div>
+</div>
+
+
       <div id="gameAccountsList" class="mini-list"></div>
     </section>
 
@@ -271,6 +294,62 @@ document.addEventListener('click', async (e) => {
 document.addEventListener('DOMContentLoaded', () => {
   loadGameAccounts();
 });
+</script>
+<script>
+(() => {
+  const modal = document.getElementById('deleteModal');
+  const input = document.getElementById('deleteConfirmInput');
+  const confirmBtn = document.getElementById('deleteConfirm');
+  const cancelBtn = document.getElementById('deleteCancel');
+  const msg = document.getElementById('deleteMsg');
+
+  let currentLogin = null;
+  const keyword = document.documentElement.lang === 'en' ? 'delete' : 'smazat';
+
+  document.addEventListener('click', (e) => {
+    const btn = e.target.closest('button[data-login]');
+    if (!btn) return;
+
+    currentLogin = btn.dataset.login;
+
+    document.getElementById('deleteLogin').textContent = currentLogin;
+    document.getElementById('deleteKeyword').textContent = keyword;
+    input.value = '';
+    msg.style.display = 'none';
+    confirmBtn.disabled = true;
+
+    modal.classList.remove('hidden');
+  });
+
+  input.addEventListener('input', () => {
+    confirmBtn.disabled = input.value.trim() !== keyword;
+  });
+
+  cancelBtn.addEventListener('click', () => {
+    modal.classList.add('hidden');
+  });
+
+  confirmBtn.addEventListener('click', async () => {
+    confirmBtn.disabled = true;
+
+    const res = await fetch('/api/delete_game_account.php', {
+      method: 'POST',
+      headers: {'Content-Type':'application/json'},
+      body: JSON.stringify({ login: currentLogin })
+    });
+
+    const data = await res.json().catch(() => ({}));
+
+    if (data.ok) {
+      modal.classList.add('hidden');
+      await loadGameAccounts();
+    } else {
+      msg.style.display = 'block';
+      msg.textContent = data.error || 'Chyba.';
+      confirmBtn.disabled = false;
+    }
+  });
+})();
 </script>
 
 </body>
