--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -65,7 +65,7 @@
     <input id="deleteConfirmInput" type="text" placeholder="type delete">
 
     <div class="modal-actions">
-      <button id="deleteCancel" class="btn">delete</button>
+      <button id="deleteCancel" class="btn">Cancel</button>
       <button id="deleteConfirm" class="btn btn-danger" disabled>
         Delete account
       </button>
