--- a/profile/index.html
+++ b/profile/index.html
@@ -75,6 +75,28 @@
   </div>
 </div>
 
+<div id="resetModal" class="modal hidden">
+  <div class="modal-box">
+    <h3>Reset hesla</h3>
+
+    <p>
+      Zadej nové heslo pro účet <strong id="resetLogin"></strong>.
+    </p>
+
+    <input id="resetPass1" type="password" placeholder="Nové heslo (min. 6 znaků)">
+    <input id="resetPass2" type="password" placeholder="Potvrzení hesla">
+
+    <div class="modal-actions">
+      <button id="resetCancel" class="btn">Zrušit</button>
+      <button id="resetConfirm" class="btn btn-primary" disabled>
+        Změnit heslo
+      </button>
+    </div>
+
+    <div id="resetMsg" class="form-error" style="display:none;"></div>
+  </div>
+</div>
+
 
       <div id="gameAccountsList" class="mini-list"></div>
     </section>
@@ -317,6 +339,71 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 })();
 </script>
+
+<script>
+(() => {
+  const modal = document.getElementById('resetModal');
+  const loginEl = document.getElementById('resetLogin');
+  const pass1 = document.getElementById('resetPass1');
+  const pass2 = document.getElementById('resetPass2');
+  const confirmBtn = document.getElementById('resetConfirm');
+  const cancelBtn = document.getElementById('resetCancel');
+  const msg = document.getElementById('resetMsg');
+
+  let currentLogin = null;
+
+  document.addEventListener('click', (e) => {
+    const btn = e.target.closest('button[data-reset]');
+    if (!btn) return;
+
+    currentLogin = btn.dataset.reset;
+
+    loginEl.textContent = currentLogin;
+    pass1.value = '';
+    pass2.value = '';
+    msg.style.display = 'none';
+    confirmBtn.disabled = true;
+
+    modal.classList.remove('hidden');
+  });
+
+  const validate = () => {
+    confirmBtn.disabled =
+      pass1.value.length < 6 || pass1.value !== pass2.value;
+  };
+
+  pass1.addEventListener('input', validate);
+  pass2.addEventListener('input', validate);
+
+  cancelBtn.addEventListener('click', () => {
+    modal.classList.add('hidden');
+  });
+
+  confirmBtn.addEventListener('click', async () => {
+    confirmBtn.disabled = true;
+
+    const res = await fetch('/api/reset_game_password.php', {
+      method: 'POST',
+      headers: {'Content-Type': 'application/json'},
+      body: JSON.stringify({
+        login: currentLogin,
+        password: pass1.value
+      })
+    });
+
+    const data = await res.json().catch(() => ({}));
+
+    if (data.ok) {
+      modal.classList.add('hidden');
+    } else {
+      msg.style.display = 'block';
+      msg.textContent = data.error || 'Chyba.';
+      confirmBtn.disabled = false;
+    }
+  });
+})();
+</script>
+
 
 </body>
 </html>
