--- a/profile/index.html
+++ b/profile/index.html
@@ -160,6 +160,8 @@ document.addEventListener('DOMContentLoaded', async () => {
 });
 </script>
 
+
+
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const tabs = document.querySelectorAll('.profile-tabs .tab');
@@ -345,13 +347,16 @@ document.addEventListener('DOMContentLoaded', () => {
     const data = await res.json().catch(() => ({}));
 
     if (data.ok) {
-      modal.classList.add('hidden');
-      await loadGameAccounts();
-    } else {
-      msg.style.display = 'block';
-      msg.textContent = data.error || 'Chyba.';
-      confirmBtn.disabled = false;
-    }
+  modal.classList.add('hidden');
+  notify('success', 'Herní účet byl smazán');
+  await loadGameAccounts();
+} else if (data.error === 'ACCOUNT_HAS_ACTIVE_CHARACTERS') {
+  notify('error', 'Účet má aktivní postavy');
+  confirmBtn.disabled = false;
+} else {
+  notify('error', data.error || 'Chyba při mazání účtu');
+  confirmBtn.disabled = false;
+}
   });
 })();
 </script>
@@ -420,6 +425,25 @@ document.addEventListener('DOMContentLoaded', () => {
 })();
 </script>
 
+<script>
+function notify(type, message, timeout = 3000) {
+  const box = document.getElementById('notifications');
+  if (!box) return;
 
+  const el = document.createElement('div');
+  el.className = `notify ${type}`;
+  el.textContent = message;
+
+  box.appendChild(el);
+
+  setTimeout(() => {
+    el.style.opacity = '0';
+    setTimeout(() => el.remove(), 300);
+  }, timeout);
+}
+</script>
+
+
+<div id="notifications"></div>
 </body>
 </html>
